# nova

./: Cargo.toml  Main.nova  Main.⚡  README.md  TODO.txt  c.zirox  macros_examples.txt  main.ZPP  main.py
nova_code_examples/: procesos.nv
src/: main.rs
src/ast/: ast_generator.rs  custom_keys.rs  magic.rs  mod.rs  token.rs
src/ast_macros/: build_macros.rs  mod.rs
src/nova_interpreter/: builtin_std.rs  declaration_matcher.rs  mod.rs  nova_builtin.rs  nova_engine.rs  nova_modules.rs
src/shell/: mod.rs  zirox_shell.rs
src/sym_table/: symbols.rs
src/tokenizer/: token.rs
src/var_table/: mod.rs  vtable.rs
