[package]
name = "nova"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "*", features = ["full"] }
quote = "*"
proc-macro2 = { version = "1.0.52", features = ["span-locations"] }
evalexpr = { version = "*", features = ["regex_support"] }
